Solve sonar stream bugs